@@ -12,6 +12,7 @@
         "endregion",
         "megastructures",
         "megatructures",
+        "modals",
         "popover",
         "sider",
         "spec",
