@@ -90,4 +90,11 @@
     </nz-form-label>
     <nz-switch name="w2" [(ngModel)]="os.disableSmallWarpNoti"></nz-switch>
   </nz-form-item>
+
+  <nz-form-item>
+    <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="pn">
+      Disable "Production stopped" modal
+    </nz-form-label>
+    <nz-switch name="pn" [(ngModel)]="os.disableProdStopNoti"></nz-switch>
+  </nz-form-item>
 </form>
